[package]
name = "hierarchy-contact"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.12"
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11.8"
futures-util = "0.3"
actix-service = "2.0.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
aws-sdk-secretsmanager = "1.78.0"
aws-config = "1.8.1"
anyhow = "1"
jsonwebtoken = "9.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


